[gd_scene load_steps=3 format=3 uid="uid://bdvb54rvoo7m2"]

[ext_resource type="Script" path="res://components/ContainsPlayer.gd" id="1_71h61"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ithge"]
size = Vector2(14, 14)

[node name="ContainsPlayer" type="Area2D"]
script = ExtResource("1_71h61")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_ithge")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
